--- a/index.html
+++ b/index.html
@@ -21,27 +21,30 @@
 </head>
 
 <body>
+  <!-- Seção Inicial -->
   <section class="section-top-main">
     <div class="nav-bar">
       <figure class="logo">
         <img src="assets/images/logo.svg" alt="logo">
       </figure>
-
+      <!-- barra de navegação -->
       <nav class="sections">
-        <p class="inter-nav"><a href="">About</a></p>
-        <p class="inter-nav"><a href="">Careers</a></p>
-        <p class="inter-nav"><a href="">Events</a></p>
-        <p class="inter-nav"><a href="">Products</a></p>
-        <p class="inter-nav"><a href="">Support</a></p>
+        <p><a href="">About</a></p>
+        <p><a href="">Careers</a></p>
+        <p><a href="">Events</a></p>
+        <p><a href="">Products</a></p>
+        <p><a href="">Support</a></p>
       </nav>
     </div>
+
+    <div class="title">
+      <h1>Immersive experiences that deliver</h1>
+    </div>
   </section>
-  
-  <!-- About
-  Careers
-  Events
-  Products
-  Support
+
+  <!-- Seção Informação Sobre -->
+
+  <!--
 
   Immersive experiences that deliver
   The leader in interactive VR
