--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
 <body>
   <!-- Seção Inicial -->
-  <section class="section-top-main">
+  <section class="section-top-main sect-vh">
     <div class="nav-bar">
       <figure class="logo">
         <img src="assets/images/logo.svg" alt="logo">
@@ -43,11 +43,22 @@
   </section>
 
   <!-- Seção Informação Sobre -->
+  <section class="section-about-main sect-vh">
+    <div class="content-about">
+      <figure>
+        <img src="assets/images/desktop/image-interactive.jpg" alt="from-above">
+      </figure>
 
+      <div class="info-about">
+        <h2>The leader in interactive VR</h2>
+        <p>Founded in 2011, Loopstudios has been producing world-class virtual reality
+          projects for some of the best companies around the globe. Our award-winning
+          creations have transformed businesses through digital experiences that bind
+          to their brand.</p>
+      </div>
+    </div>
+  </section>
   <!--
-
-  Immersive experiences that deliver
-  The leader in interactive VR
 
 
   Founded in 2011, Loopstudios has been producing world-class virtual reality
