--- a/index.html
+++ b/index.html
@@ -58,13 +58,20 @@
       </div>
     </div>
   </section>
+
+  <!-- Seção grade de imagens -->
+  <section class="section-grid-images sect-vh">
+    <div class="content-grid">
+      <div class="our-creations">
+        <h2>Our creations</h2>
+        <button>See all</button>
+      </div>
+  
+      <div class="grid-imgs"></div>
+    </div>
+  </section>
+
   <!--
-
-
-  Founded in 2011, Loopstudios has been producing world-class virtual reality
-  projects for some of the best companies around the globe. Our award-winning
-  creations have transformed businesses through digital experiences that bind
-  to their brand.
 
   Our creations
 
