secao grade de imagens

--- a/index.html
+++ b/index.html
@@ -67,24 +67,43 @@
         <button>See all</button>
       </div>
   
-      <div class="grid-imgs"></div>
+      <div class="grid-imgs">
+        <div class="figures fig-de">
+          <h3>DEEP EARTH</h3>
+        </div>
+
+        <div class="figures fig-na">
+          <h3>NIGHT ARCADE</h3>
+        </div>
+
+        <div class="figures fig-st">
+          <h3>SOCCER TEAM</h3>
+        </div>
+
+        <div class="figures fig-tg">
+          <h3>THE GRID</h3>
+        </div>
+
+        <div class="figures fig-fa">
+          <h3>FROM UP ABOVE VR</h3>
+        </div>
+
+        <div class="figures fig-pb">
+          <h3>POCKET BOREALIS</h3>
+        </div>
+
+        <div class="figures fig-tc">
+          <h3>THE CURIOSITY</h3>
+        </div>
+
+        <div class="figures fig-mf">
+          <h3>MAKE IT FISHEYE</h3>
+        </div>
+      </div>
     </div>
   </section>
 
   <!--
-
-  Our creations
-
-  See all
-
-  Deep earth
-  Night arcade
-  Soccer team VR
-  The grid
-  From up above VR
-  Pocket borealis
-  The curiosity
-  Make it fisheye
 
   About
   Careers
