versao desktop completa

--- a/index.html
+++ b/index.html
@@ -60,13 +60,13 @@
   </section>
 
   <!-- Seção grade de imagens -->
-  <section class="section-grid-images sect-vh">
+  <section class="section-grid-images">
     <div class="content-grid">
       <div class="our-creations">
         <h2>Our creations</h2>
         <button>See all</button>
       </div>
-  
+      <!-- sequencia de imagens no display grid -->
       <div class="grid-imgs">
         <div class="figures fig-de">
           <h3>DEEP EARTH</h3>
@@ -103,15 +103,36 @@
     </div>
   </section>
 
-  <!--
+  <!-- Seção do rodapé -->
+  <footer class="footer-content">
+    <div class="size-limit">
+      <div class="nav-bar">
+        <figure class="logo">
+          <img src="assets/images/logo.svg" alt="logo">
+        </figure>
+        <!-- barra de navegação -->
+        <nav class="sections">
+          <p><a href="">About</a></p>
+          <p><a href="">Careers</a></p>
+          <p><a href="">Events</a></p>
+          <p><a href="">Products</a></p>
+          <p><a href="">Support</a></p>
+        </nav>
+      </div>
 
-  About
-  Careers
-  Events
-  Products
-  Support
+      <!-- redes sociais -->
+      <div class="nav-bar icons">
+        <nav class="sections">
+          <p><a href=""><img src="assets/images/icon-facebook.svg" alt=""></a></p>
+          <p><a href=""><img src="assets/images/icon-twitter.svg" alt=""></a></p>
+          <p><a href=""><img src="assets/images/icon-pinterest.svg" alt=""></a></p>
+          <p><a href=""><img src="assets/images/icon-instagram.svg" alt=""></a></p>
+        </nav>
 
-  © 2021 Loopstudios. All rights reserved. -->
+        <p>© 2021 Loopstudios. All rights reserved.</p>
+      </div>
+    </div>
+  </footer>
 </body>
 
 </html>
