versao desktop completa organizada

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <body>
   <!-- Seção Inicial -->
   <section class="section-top-main sect-vh">
-    <div class="nav-bar">
+    <div class="nav-bar limit-vw">
       <figure class="logo">
         <img src="assets/images/logo.svg" alt="logo">
       </figure>
@@ -37,14 +37,14 @@
       </nav>
     </div>
 
-    <div class="title">
+    <div class="limit-vw">
       <h1>Immersive experiences that deliver</h1>
     </div>
   </section>
 
   <!-- Seção Informação Sobre -->
   <section class="section-about-main sect-vh">
-    <div class="content-about">
+    <div class="limit-vw">
       <figure>
         <img src="assets/images/desktop/image-interactive.jpg" alt="from-above">
       </figure>
@@ -61,7 +61,7 @@
 
   <!-- Seção grade de imagens -->
   <section class="section-grid-images">
-    <div class="content-grid">
+    <div class="limit-vw">
       <div class="our-creations">
         <h2>Our creations</h2>
         <button>See all</button>
@@ -105,7 +105,7 @@
 
   <!-- Seção do rodapé -->
   <footer class="footer-content">
-    <div class="size-limit">
+    <div class="size-limit limit-vw">
       <div class="nav-bar">
         <figure class="logo">
           <img src="assets/images/logo.svg" alt="logo">
