--- a/index.html
+++ b/index.html
@@ -46,7 +46,10 @@
   <section class="section-about-main sect-vh">
     <div class="limit-vw">
       <figure>
+        <!-- img desktop -->
         <img src="assets/images/desktop/image-interactive.jpg" alt="from-above">
+        <!-- img mobile -->
+        <img src="assets/images/mobile/image-interactive.jpg" alt="from-above">
       </figure>
 
       <div class="info-about">
