responsividade barra de navegacao

--- a/index.html
+++ b/index.html
@@ -35,6 +35,8 @@
         <p><a href="">Products</a></p>
         <p><a href="">Support</a></p>
       </nav>
+      <!-- menu-hamburguer -->
+      <span><img src="assets/images/icon-hamburger.svg" alt="menu-nav" class="icon-hamburger"></span>
     </div>
 
     <div class="limit-vw">
