responsividade barra de navegacao js

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <img src="assets/images/logo.svg" alt="logo">
       </figure>
       <!-- barra de navegação -->
-      <nav class="sections">
+      <nav class="sections" id="mostraNav">
         <p><a href="">About</a></p>
         <p><a href="">Careers</a></p>
         <p><a href="">Events</a></p>
@@ -36,7 +36,7 @@
         <p><a href="">Support</a></p>
       </nav>
       <!-- menu-hamburguer -->
-      <span><img src="assets/images/icon-hamburger.svg" alt="menu-nav" class="icon-hamburger"></span>
+      <span><img src="assets/images/icon-hamburger.svg" alt="menu-nav" id="iconHamburger"></span>
     </div>
 
     <div class="limit-vw">
@@ -138,6 +138,8 @@
       </div>
     </div>
   </footer>
+
+  <script src="assets/js/main.js"></script>
 </body>
 
 </html>
