responsividade secao grid imagens

--- a/index.html
+++ b/index.html
@@ -69,7 +69,6 @@
     <div class="limit-vw">
       <div class="our-creations">
         <h2>Our creations</h2>
-        <button>See all</button>
       </div>
       <!-- sequencia de imagens no display grid -->
       <div class="grid-imgs">
@@ -104,6 +103,9 @@
         <div class="figures fig-mf">
           <h3>MAKE IT FISHEYE</h3>
         </div>
+      </div>
+      <div class="see-all">
+        <button>SEE ALL</button>
       </div>
     </div>
   </section>
